--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "Defri Indra Mahardika",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/defrindr/validator/issues"
+    "url": "https://github.com/defrindr/validanode/issues"
   },
-  "homepage": "https://github.com/defrindr/validator#readme"
+  "homepage": "https://github.com/defrindr/validanode#readme"
 }
